<resources>
    <string name="app_name">LuxMeter</string>
    <string name="scan_hint">Please focus on the QR Code</string>
    <string name="manual_login">Manual Login</string>
    <string name="error">Error</string>
    <string name="credentials">Credentials</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="fill_error">Please enter the device info</string>
    <string name="sensor_values">sensor values (lux)</string>
    <string name="sensor_values_calibrate">sensor value (lux):</string>
    <string name="first">1-</string>
    <string name="second">2-</string>
    <string name="third">3-</string>
    <string name="fourth">4-</string>
    <string name="fifth">5-</string>
    <string name="reset">reset</string>
    <string name="connecting">Connecting…</string>
    <string name="mode">light</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="record">Record</string>
    <string name="average">Average: </string>
    <string name="calibrate_hint">Please place the lux meter in the middle below your device.</string>
    <string name="calibrate">Calibrate</string>
    <string name="help">این وسیله برای اندازه گیری شدت نور دستگاه فتوتراپی طراحی شده است. جهت اندازه گیری, لوکس متر را ابتدا پس از بردن آن وسط زیر دستگاه, کالیبره کنید و سپس در پنچ جای دستگاه ببرید و طبق راهنمایی های برنامه عمل کنید.</string>
</resources>
