<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Calibrate">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <TextView
        android:id="@+id/calibrate_position_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="110dp"
        android:background="@drawable/text_view_background_off"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/one"
        android:textColor="@color/buttonTextColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <TextView
        android:id="@+id/calibrate_position_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/text_view_background_off"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/two"
        android:textColor="@color/buttonTextColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />

    <View
        android:id="@+id/calibrate_position_view_top"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:alpha="0.4"
        android:background="@color/hintColor"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/calibrate_position_one"
        app:layout_constraintEnd_toStartOf="@id/calibrate_position_two"
        app:layout_constraintStart_toEndOf="@id/calibrate_position_one"
        app:layout_constraintTop_toTopOf="@id/calibrate_position_one" />

    <TextView
        android:id="@+id/calibrate_position_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:background="@drawable/text_view_background_off"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/three"
        android:textColor="@color/buttonTextColor"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/calibrate_position_one"
        app:layout_constraintTop_toBottomOf="@id/calibrate_position_one" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:alpha="0.4"
        android:background="@color/hintColor"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/calibrate_position_three"
        app:layout_constraintEnd_toEndOf="@id/calibrate_position_three"
        app:layout_constraintStart_toStartOf="@id/calibrate_position_three"
        app:layout_constraintTop_toBottomOf="@id/calibrate_position_one" />

    <TextView
        android:id="@+id/calibrate_position_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:background="@drawable/text_view_background_off"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/four"
        android:textColor="@color/buttonTextColor"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@id/calibrate_position_two"
        app:layout_constraintTop_toBottomOf="@id/calibrate_position_two" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:alpha="0.4"
        android:background="@color/hintColor"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/calibrate_position_three"
        app:layout_constraintEnd_toEndOf="@id/calibrate_position_four"
        app:layout_constraintStart_toStartOf="@id/calibrate_position_four"
        app:layout_constraintTop_toBottomOf="@id/calibrate_position_one" />

    <View
        android:id="@+id/calibrate_position_view_bottom"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:alpha="0.4"
        android:background="@color/hintColor"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/calibrate_position_four"
        app:layout_constraintEnd_toStartOf="@id/calibrate_position_four"
        app:layout_constraintStart_toEndOf="@id/calibrate_position_three"
        app:layout_constraintTop_toTopOf="@id/calibrate_position_four" />

    <TextView
        android:id="@+id/calibrate_position_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_background"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/five"
        android:textColor="@color/buttonTextColor"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/calibrate_position_view_bottom"
        app:layout_constraintEnd_toStartOf="@id/calibrate_position_two"
        app:layout_constraintStart_toEndOf="@id/calibrate_position_one"
        app:layout_constraintTop_toTopOf="@id/calibrate_position_view_top" />

    <TextView
        android:id="@+id/calibrate_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:gravity="center"
        android:text="@string/calibrate_hint"
        android:textColor="@color/text"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calibrate_position_three" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/calibrate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/elevationColor"
        android:elevation="8dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/calibrate_hint">

        <TextView
            android:id="@+id/calibrate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sensor_values_calibrate"
            android:textAllCaps="true"
            android:textColor="@color/text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calibrate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/calibrate_title"
            app:layout_constraintStart_toEndOf="@id/calibrate_title"
            app:layout_constraintTop_toTopOf="@id/calibrate_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/calibrate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/calibrate"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calibrate_layout"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>