<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:id="@+id/main_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="@id/tool_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:id="@+id/main_hint_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_view_background_off"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/one"
                    android:gravity="center"
                    android:textColor="@color/buttonTextColor"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/main_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/sensor_values"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_hint_layout" />

            <TextView
                android:id="@+id/main_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/reset"
                android:textAllCaps="true"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/main_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_first_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/elevationColor"
                android:elevation="8dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/main_reset">

                <TextView
                    android:id="@+id/main_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/one"
                    android:textColor="@color/text"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/main_first_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/textColor"
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@id/main_first"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_second_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/elevationColor"
                android:elevation="8dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/main_first_layout">

                <TextView
                    android:id="@+id/main_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/two"
                    android:textColor="@color/text"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/main_second_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/textColor"
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@id/main_second"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_third_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/elevationColor"
                android:elevation="8dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/main_second_layout">

                <TextView
                    android:id="@+id/main_third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/three"
                    android:textColor="@color/text"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/main_third_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/textColor"
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@id/main_third"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_fourth_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/elevationColor"
                android:elevation="8dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/main_third_layout"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/main_fourth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/four"
                    android:textColor="@color/text"
                    android:textSize="22sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/main_fourth_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/textColor"
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@id/main_fourth"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/main_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mybutton"
        android:text="@string/connect"
        android:textAllCaps="false"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_scrollview" />

    <TextView
        android:id="@+id/main_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/main_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>